fixed spacing with home page

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -1,3 +1,7 @@
+.games-page {
+    background: linear-gradient( to bottom, rgba(42,71,94,1.0) 5%, rgba(42,71,94,0.0) 70%);
+}
+
 .games-list-image {
     height: 69px;
     width: 184px;
@@ -15,7 +19,8 @@
 
 
 .game-card {
-    background-color: #203748;
+    background: #202d39;
+    background: rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -26,44 +31,46 @@
 }
 
 
-
-
-.game-card.active{
+.game-card.active {
     background-color: #a4c8de;
     color: #181f26 !important;
-}
-
+    width: 650px;
+    margin-left: 2.25em;
+    border: none;
+    box-shadow: none;
+  }
 
 .game-card h2 {
     margin-right: auto;
 }
 
 .game-card p {
-    margin-left: auto;
+    margin-right: 1em;
+    color: #acdbf5;
+}
+.game-card.active p {
+    margin-right: 3em;
+    color: #181f26;
 }
 
 .title-text {
     font-size: 15px;
 }
-  
-#home-price {
-    margin-right: 8px;
-    color: #acdbf5;
-}
 
 
-/* TODO set display flex and visibility value maybe (ie. visibility: visible) */
 .hover-container {
     display: none;
-    position: absolute;
-    top: 30%;
-    right: 15%;
+    position: fixed;
+    border: none;
+    top: 70%;
+    left: 72%;
+    transform: translate(-50%, -50%);
     width: 300px;
     height: 675px;
     padding: 10px;
     background-color: #a4c8de;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  }
+  }  
+  
   
   
 .game-card:hover .hover-container {
@@ -72,6 +79,7 @@
 
 .active .hover-container {
     display: block;
+    position: absolute
 }
 
 .game-hover-images {
